corrected the nav toggler colour on mobile view

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1197,3 +1197,8 @@
 	}
 	
 }
+@media only screen and (max-width: 380px) {
+	.banner-section-three .content h1 span{
+		color: white;
+	}
+}
